parametrizando versão do wildfly e outputdir

--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,15 @@
 apply plugin: 'java'
 
+project.ext {
+  wildflyVersion='9.0.2.Final'
+  opensingularDir='build/opensingular'
+}
+
 task downloadWildFly {
   doLast {
     def wildfly = new File('wildfly.zip')
       if (!wildfly.exists()) {
-        new URL('http://download.jboss.org/wildfly/9.0.2.Final/wildfly-9.0.2.Final.zip').withInputStream{ i -> wildfly.withOutputStream{ it << i }}
+        new URL('http://download.jboss.org/wildfly/'+wilflyVersion+'/wildfly-'+wildflyVersion+'.zip').withInputStream{ i -> wildfly.withOutputStream{ it << i }}
       }		
   }	
 }
@@ -14,7 +19,7 @@ task unzipWildFly(type: Copy){
     def wildflyzip = new File('wildfly.zip')
     if (wildflyzip.exists() && !wildfly.exists()) {
       from zipTree('wildfly.zip')
-        into wildfly
+      into wildfly
     }
 }
 
@@ -24,16 +29,16 @@ task configureWildFly(dependsOn: ['downloadWildFly', 'unzipWildFly']) {
 
 task createFolders {
   doLast {
-    mkdir('build/opensingular')
-      mkdir('build/opensingular/wildfly')
-      mkdir('build/opensingular/lib')
-      mkdir('build/opensingular/mongo')
-      mkdir('build/opensingular/tmp')
-      mkdir('build/opensingular/deploy')
-      mkdir('build/opensingular/bin')
-      mkdir('build/opensingular/logs')
-      mkdir('build/opensingular/conf')
-      mkdir('build/opensingular/runtime')
+    mkdir(opensingularDir)
+    mkdir(opensingularDir+'/wildfly')
+    mkdir(opensingularDir+'/lib')
+    mkdir(opensingularDir+'/mongo')
+    mkdir(opensingularDir+'/tmp')
+    mkdir(opensingularDir+'/deploy')
+    mkdir(opensingularDir+'/bin')
+    mkdir(opensingularDir+'/logs')
+    mkdir(opensingularDir+'/conf')
+    mkdir(opensingularDir+'/runtime')
   }
 }
 
@@ -41,25 +46,25 @@ task copyContents {
   doLast {
     copy {
       from 'resources/bin'
-        into 'build/opensingular/bin'
+      into opensingularDir+'/bin'
     }
     copy {
-      from 'wildfly/wildfly-9.0.2.Final'
-        into 'build/opensingular/wildfly'
+      from 'wildfly/wildfly-'+wildflyVersion
+      into opensingularDir+'/wildfly'
     }
     copy {
       from 'resources/wildfly'
-        into 'build/opensingular/wildfly'
+      into opensingularDir+'/wildfly'
     }
     copy {
       from 'resources/conf'
-        into 'build/opensingular/conf'
+      into opensingularDir+'/conf'
     }
   }
 }
 
 task createZip (type: Zip) {
-  from 'build/opensingular'
+  from opensingularDir
 }
 
 task install(dependsOn: ['configureWildFly', 'clean', 'createFolders', 'copyContents', 'createZip']) {
