--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ defaultTasks 'buildPlatform'
 project.ext {
   wildflyVersion='9.0.2.Final'
   opensingularDir='build/opensingular'
-  singularVersion = '1.0.1'
+  singularVersion = '1.0.2-SNAPSHOT'
 }
 
 task configureWildFly(type: Copy){
