--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,76 @@
+# Gradle and Platform #
+######################
+
 build/**
 /wildfly
 /wildfly/**
 wildfly.zip
 wildfly.tar.gz
 .gradle/**
+
+
+# Arquivos H2/HSQL   #
+######################
+**/*.h2.db
+**/*.trace.db
+**/*.mv.db
+**/*.tmp
+**/singulardb.lock.db
+
+# Arquivos MAVEN     #
+######################
+**/target/
+**/overlays/
+pom.xml.tag
+pom.xml.releaseBackup
+pom.xml.versionsBackup
+pom.xml.next
+release.properties
+
+# OS generated files #
+######################
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db 
+
+# Arquivos IntelliJ  #
+######################
+.idea/
+classes/
+atlassian-ide-plugin.xml
+**/*.iml
+
+# Arquivos Eclipse   #
+######################
+.project
+.metadata
+bin/**
+tmp/**
+tmp/**/*
+*.tmp
+*.bak
+*.swp
+*~.nib
+local.properties
+.classpath
+.settings/
+.loadpath
+**/.externalToolBuilders/
+
+# Arquivos JRebel    #
+######################
+**/rebel.xml
+out/**
+
+# outros #
+buildall.sh
+_confHomol/
+flow/test/singulardb.trace.db.old
+
+# Aid Diagramas      #
+######################
+**/*.ucls
